# simparx

./: PYPROJECT.TOML  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/simpar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
