[project]
name = "simparx"
version = "0.2.1"
description = "Package for a simple paragraph recognition based on the morphology operator"
readme = "README.md"
authors = [
    { name = "Darix SAMANI SIEWE", email = "samanidarix@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
]

[project.scripts]
simparx = "simparx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
